--- a/src/app/components/encuesta/encuesta.component.html
+++ b/src/app/components/encuesta/encuesta.component.html
@@ -13,10 +13,10 @@
       'baja': resultado.compatibilidad < 3
     }">
       <p *ngIf="resultado.compatibilidad >= 3">
-        ¡Eres altamente compatible con varias mascotas!
+        ¡Eres altamente compatible con varias mascotas de tu tipo emocional!
       </p>
       <p *ngIf="resultado.compatibilidad < 3">
-        Te sugerimos una mascota tranquila y paciente.
+        Eres compatible con varias varias mascotas de tu tipo emocional.
       </p>
     </div>
 
